@@ -2241,6 +2241,10 @@ Recommended to use when OpenGL video output is in RTT mode.</source>
         <source>Store aspect ratio and zoom in config file</source>
         <translation type="unfinished"></translation>
     </message>
+    <message>
+        <source>Unpause when seeking</source>
+        <translation type="unfinished"></translation>
+    </message>
 </context>
 <context>
     <name>Player</name>
