@@ -183,6 +183,7 @@ void SettingsWidget::InitSettings()
 	QMPSettings.init("WheelSeek", true);
 	QMPSettings.init("LeftMouseTogglePlay", false);
 	QMPSettings.init("AccurateSeek", Qt::PartiallyChecked);
+	QMPSettings.init("UnpauseWhenSeeking", false);
 	QMPSettings.init("StoreARatioAndZoom", false);
 	QMPSettings.init("SavePos", false);
 	QMPSettings.init("KeepZoom", false);
@@ -483,6 +484,8 @@ SettingsWidget::SettingsWidget(int page, const QString &moduleName, QWidget *vid
 
 		page2->accurateSeekB->setCheckState((Qt::CheckState)QMPSettings.getInt("AccurateSeek"));
 		page2->accurateSeekB->setToolTip(tr("Slower, but more accurate seeking.\nPartially checked doesn't affect seeking on slider."));
+
+		page2->unpauseWhenSeekingB->setChecked(QMPSettings.getBool("UnpauseWhenSeeking"));
 
 		const QString modulesListTitle[3] = {
 			tr("Video output priority"),
@@ -854,6 +857,7 @@ void SettingsWidget::apply()
 			QMPSettings.set("IgnorePlaybackError", page2->ignorePlaybackError->isChecked());
 			QMPSettings.set("LeftMouseTogglePlay", page2->leftMouseTogglePlay->isChecked());
 			QMPSettings.set("AccurateSeek", page2->accurateSeekB->checkState());
+			QMPSettings.set("UnpauseWhenSeeking", page2->unpauseWhenSeekingB->isChecked());
 			QMPSettings.set("StoreARatioAndZoom", page2->storeARatioAndZoomB->isChecked());
 
 			QStringList videoWriters, audioWriters, decoders;
