@@ -6,16 +6,7 @@
    <property name="spacing">
     <number>0</number>
    </property>
-   <property name="leftMargin">
-    <number>0</number>
-   </property>
-   <property name="topMargin">
-    <number>0</number>
-   </property>
-   <property name="rightMargin">
-    <number>0</number>
-   </property>
-   <property name="bottomMargin">
+   <property name="margin">
     <number>0</number>
    </property>
    <item>
@@ -36,25 +27,16 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>-265</y>
-        <width>556</width>
-        <height>611</height>
+        <y>0</y>
+        <width>1086</width>
+        <height>1002</height>
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout">
-       <property name="leftMargin">
-        <number>1</number>
-       </property>
-       <property name="topMargin">
-        <number>1</number>
-       </property>
-       <property name="rightMargin">
-        <number>1</number>
-       </property>
-       <property name="bottomMargin">
-        <number>1</number>
-       </property>
        <property name="verticalSpacing">
+        <number>1</number>
+       </property>
+       <property name="margin">
         <number>1</number>
        </property>
        <item row="1" column="0">
@@ -69,16 +51,7 @@
           <property name="spacing">
            <number>1</number>
           </property>
-          <property name="leftMargin">
-           <number>3</number>
-          </property>
-          <property name="topMargin">
-           <number>3</number>
-          </property>
-          <property name="rightMargin">
-           <number>3</number>
-          </property>
-          <property name="bottomMargin">
+          <property name="margin">
            <number>3</number>
           </property>
           <item>
@@ -413,16 +386,7 @@
           <property name="spacing">
            <number>1</number>
           </property>
-          <property name="leftMargin">
-           <number>3</number>
-          </property>
-          <property name="topMargin">
-           <number>3</number>
-          </property>
-          <property name="rightMargin">
-           <number>3</number>
-          </property>
-          <property name="bottomMargin">
+          <property name="margin">
            <number>3</number>
           </property>
           <item>
@@ -449,7 +413,7 @@
          </property>
         </widget>
        </item>
-       <item row="21" column="0" colspan="3">
+       <item row="22" column="0" colspan="3">
         <spacer name="verticalSpacer">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -473,6 +437,13 @@
         <widget class="QCheckBox" name="storeARatioAndZoomB">
          <property name="text">
           <string>Store aspect ratio and zoom in config file</string>
+         </property>
+        </widget>
+       </item>
+       <item row="20" column="0">
+        <widget class="QCheckBox" name="unpauseWhenSeekingB">
+         <property name="text">
+          <string>Unpause when seeking</string>
          </property>
         </widget>
        </item>
